# ithub-python-exercises-1

./: .gitignore  README.md  package-lock.json  pyproject.toml
src/kt1/: abbreviate.py  assistant.py  essay.py  hamming.py  inventory.py  isbn.py  rl_encoding.py  tree_house.py
tests/: abbreviate_test.py  assistant_test.py  essay_test.py  hamming_test.py  inventory_test.py  isbn_test.py  rl_encoding_test.py  tree_house_test.py
